--- a/Table.html
+++ b/Table.html
@@ -19,7 +19,7 @@ th, td {
 </head>
 <body>
 
-<h2>Server details Dashboard </h2>
+<h2>Server details Deatils only  </h2>
 
 <table style="width:30%">
   <tr>
@@ -33,7 +33,7 @@ th, td {
   </tr>
   <tr>
     <td>1</td>
-    <td>DL380</td>
+    DL380</td>
     <td>10</td>
     <td>13</td>
     <td><a href="server.html">8</a></td>
