--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 </head>
 <body class="bg" style="padding: 210px 0; background-color:DodgerBlue;">
 <center>
-<h3><font size="24"> <font color="white"> <b> Welcome to Server partner Program lab </b> </font></h3>
+<h3><font size="24"> <font color="white"> <b> Welcome to masion critical Server partner Program lab </b> </font></h3>
 
 <img src="download .jpg" alt="HPE-SPPL">
 
